# TinyMPC

./: .gitignore  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  julia_call_test.c  tiny_sdp_big_v2.jl
.github/workflows/: cmake-multi-platform.yml  sync-fork.yml
codegen/: aaaaworkspace.c  workspace.h
examples/: CMakeLists.txt  cartpole_example.cpp  codegen_cartpole.cpp  codegen_quadrotor_100hz.cpp  codegen_random.cpp  example_cartpole.cpp  example_codegen.cpp  example_quadrotor_hovering.cpp  example_quadrotor_tracking.cpp  obstacle_avoidance_admm_barebone.cpp  obstacle_avoidance_admm_debug.cpp  obstacle_avoidance_sdp_lifted.cpp  plot_admm_debug.py  plot_quadrotor_sdp.py  plot_xy_only.py  quadrotor_hovering.cpp  quadrotor_linear_constraint_demo.cpp  quadrotor_linear_constraints.cpp  quadrotor_obstacle_avoidance_sdp_lifted.cpp  quadrotor_track_traj.cpp  quadrotor_tracking.cpp  quadrotor_tv_linear_constraints.cpp  rocket_landing_mpc.cpp  test_codegen.cpp  tiny_data_workspace.cpp
examples/problem_data/: obstacle_avoidance_sdp_params.hpp  quadrotor_100hz_params.hpp  quadrotor_20hz_params.hpp  quadrotor_20hz_simple.hpp  quadrotor_50hz_params.hpp  quadrotor_obstacle_avoidance_sdp_params.hpp  rocket_landing_params_20hz.hpp
examples/trajectory_data/: quadrotor_100hz_origin.hpp  quadrotor_100hz_ref_hover.hpp  quadrotor_20hz_figure_eight.hpp  quadrotor_20hz_ref_hover.hpp  quadrotor_20hz_y_axis_line.hpp
generated_code/: CMakeLists.txt  README.md  srctiny_data_workspace.cpp
generated_code/include/Eigen/Eigen/src/Core/: GenericPacketMath.h  NumTraits.h
generated_code/include/Eigen/Eigen/src/Core/arch/AVX512/: TypeCasting.h
generated_code/include/Eigen/Eigen/src/Core/functors/: UnaryFunctors.h
generated_code/include/Eigen/Eigen/src/SVD/: SVDBase.h
generated_code/src/: CMakeLists.txt  tiny_data_workspace.cpp  tiny_main.cpp
generated_code/tinympc/: CMakeLists.txt  admm.cpp  admm.hpp  glob_opts.hpp  tiny_data_workspace.hpp  types.hpp
generated_code2/: CMakeLists.txt  README.md
generated_code2/include/Eigen/Eigen/src/Core/: VectorBlock.h
generated_code2/include/Eigen/Eigen/src/Core/arch/AVX512/: TrsmKernel.h
generated_code2/include/Eigen/Eigen/src/Core/arch/AltiVec/: MatrixProductCommon.h
generated_code2/include/Eigen/Eigen/src/Core/products/: GeneralMatrixVector.h
generated_code2/src/: CMakeLists.txt  tiny_data_workspace.cpp  tiny_main.cpp
generated_code2/tinympc/: CMakeLists.txt  admm.cpp  glob_opts.hpp  tiny_data_workspace.hpp
generated_code_2/src/: tiny_data_workspace.cpp
generated_code_2/tinympc/: glob_opts.hpp
generated_code_julia_wrapper/: CMakeLists.txt  README.md
generated_code_julia_wrapper/examples/: test_codegen
generated_code_julia_wrapper/include/Eigen/Eigen/src/Core/: Dot.h  MathFunctions.h
generated_code_julia_wrapper/include/Eigen/Eigen/src/Core/products/: TriangularSolverMatrix.h
generated_code_julia_wrapper/src/: CMakeLists.txt  julia_wrapper.cpp  tiny_data_workspace.cpp  tiny_main.cpp
generated_code_julia_wrapper/test/: test1
generated_code_julia_wrapper/tinympc/: CMakeLists.txt  admm.cpp  glob_opts.hpp  tiny_data_workspace.hpp
include/Eigen/: Eigen.h
include/Eigen/Eigen/src/Core/: Block.h  IO.h  MapBase.h  PlainObjectBase.h  Ref.h  SolveTriangular.h
include/Eigen/Eigen/src/Core/arch/AVX/: PacketMath.h  TypeCasting.h
include/Eigen/Eigen/src/Core/arch/AltiVec/: Complex.h  MatrixProduct.h  PacketMath.h
include/Eigen/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
include/Eigen/Eigen/src/Core/arch/NEON/: PacketMath.h
include/Eigen/Eigen/src/Core/arch/SSE/: TypeCasting.h
include/Eigen/Eigen/src/Core/products/: TriangularMatrixMatrix.h
include/Eigen/Eigen/src/Core/util/: BlasUtil.h  ConfigureVectorization.h  Constants.h  Macros.h  Meta.h  XprHelper.h
include/Eigen/Eigen/src/Geometry/: Quaternion.h
include/Eigen/Eigen/src/SVD/: BDCSVD.h  JacobiSVD_LAPACKE.h  UpperBidiagonalization.h
include/Eigen/Eigen/src/ThreadPool/: EventCount.h
include/Eigen/src/Core/arch/AltiVec/: MatrixVectorProduct.h
include/Eigen/src/SVD/: JacobiSVD.h
src/tinympc/: CMakeLists.txt  Kbuild  admm.cpp  admm.hpp  codegen.cpp  codegen.hpp  constants.hpp  error.hpp  glob_opts.hpp  rho_benchmark.cpp  rho_benchmark.hpp  tiny_api.cpp  tiny_api.hpp  tiny_api_constants.hpp  tiny_data_workspace.hpp  tiny_wrapper.cpp  tiny_wrapper.hpp  tinympc.hpp  types.hpp
test/: CMakeLists.txt  test1.cpp
